--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 
 server.port=1111
 
-#mysqlÁ¬½ÓÅäÖÃ
+#mysqlï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/ds?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-#ÔÚ¿ØÖÆÌ«´òÓ¡sqlÈÕÖ¾
+spring.datasource.url=jdbc:mysql://192.168.153.135:3306/shop_admin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+#ï¿½Ú¿ï¿½ï¿½ï¿½Ì«ï¿½ï¿½Ó¡sqlï¿½ï¿½Ö¾
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-#mybatis¼ÓÔØmapperÓ³ÉäÎÄ¼ş
+#mybatisï¿½ï¿½ï¿½ï¿½mapperÓ³ï¿½ï¿½ï¿½Ä¼ï¿½
 mybatis-plus.mapper-locations=classpath*:mapper/*.xml
-#¹Ø±ÕÍÕ·åÃüÃû·¨
+#ï¿½Ø±ï¿½ï¿½Õ·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 mybatis-plus.configuration.map-underscore-to-camel-case=false
 
 spring.main.allow-bean-definition-overriding=true
@@ -21,23 +21,23 @@ spring.thymeleaf.cache=false
 
 
 
-#redisÉèÖÃ
-spring.redis.host=192.168.153.132
-#redisÉèÖÃ-¶Ë¿ÚºÅ
+#redisï¿½ï¿½ï¿½ï¿½
+spring.redis.host=192.168.153.135
+#redisï¿½ï¿½ï¿½ï¿½-ï¿½Ë¿Úºï¿½
 spring.redis.port=6379
-#redisÉèÖÃ-ÃÜÂë
+#redisï¿½ï¿½ï¿½ï¿½-ï¿½ï¿½ï¿½ï¿½
 spring.redis.redisPassword=
-#redisÁ¬½Ó³¬Ê±Ê±¼ä(ºÁÃë)
+#redisï¿½ï¿½ï¿½Ó³ï¿½Ê±Ê±ï¿½ï¿½(ï¿½ï¿½ï¿½ï¿½)
 spring.redis.timeout=10000
-# RedisÄ¬ÈÏÇé¿öÏÂÓĞ16¸ö·ÖÆ¬£¬ÕâÀïÅäÖÃ¾ßÌåÊ¹ÓÃµÄ·ÖÆ¬£¬Ä¬ÈÏÊÇ0
+# RedisÄ¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½16ï¿½ï¿½ï¿½ï¿½Æ¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã¾ï¿½ï¿½ï¿½Ê¹ï¿½ÃµÄ·ï¿½Æ¬ï¿½ï¿½Ä¬ï¿½ï¿½ï¿½ï¿½0
 spring.redis.database=1
-# Á¬½Ó³Ø×î´óÁ¬½ÓÊı£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£© Ä¬ÈÏ 8
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½ Ä¬ï¿½ï¿½ 8
 spring.redis.lettuce.pool.max-active=8
-# Á¬½Ó³Ø×î´ó×èÈûµÈ´ıÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£© Ä¬ÈÏ -1
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ä£¨Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½ Ä¬ï¿½ï¿½ -1
 spring.redis.lettuce.pool.max-wait=-1
-# Á¬½Ó³ØÖĞµÄ×î´ó¿ÕÏĞÁ¬½Ó Ä¬ÈÏ 8
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ğµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Ä¬ï¿½ï¿½ 8
 spring.redis.lettuce.pool.max-idle=8
-# Á¬½Ó³ØÖĞµÄ×îĞ¡¿ÕÏĞÁ¬½Ó Ä¬ÈÏ 0
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ğµï¿½ï¿½ï¿½Ğ¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Ä¬ï¿½ï¿½ 0
 spring.redis.lettuce.pool.min-idle=0
 
 
